manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tron
  labels:
    app.kubernetes.io/name: tron
